# DNNMark

./: .gitignore  20180619_dnn_bwd_conv_series.ipynb  20180630_dnn_fwdbwd_conv_series_wh32-RELU.ipynb  20180630_dnn_fwdbwd_conv_series_wh32.ipynb  20180702-dnn-conv-relu-fwdbwd-series-wh32-gpu-trace.ipynb  CMakeLists.txt  README.md  conf_conv.dnnmark  conf_multiconv.dnnmark  conf_multiconv_mod.dnnmark  conf_multiconv_mod.dnntemplate  multigpuexec.py  run_dnnmark.sh  run_dnnmark_template.sh  run_series.py  series.sh  setup.sh
bcm_experiments/config/alexnet/: bcmfc_alex_conv1_kf_16.dnnmark  bcmfc_alex_conv1_kf_32.dnnmark  bcmfc_alex_conv1_kf_64.dnnmark  bcmfc_alex_conv2_kf_16.dnnmark  bcmfc_alex_conv2_kf_32.dnnmark  bcmfc_alex_conv2_kf_64.dnnmark  bcmfc_alex_conv3_kf_16.dnnmark  bcmfc_alex_conv3_kf_32.dnnmark  bcmfc_alex_conv3_kf_64.dnnmark  bcmfc_alex_conv4_kf_16.dnnmark  bcmfc_alex_conv4_kf_32.dnnmark  bcmfc_alex_conv4_kf_64.dnnmark  bcmfc_alex_conv5_kf_16.dnnmark  bcmfc_alex_conv5_kf_32.dnnmark  bcmfc_alex_conv5_kf_64.dnnmark  bcmfc_alex_fc6_kf_16.dnnmark  bcmfc_alex_fc6_kf_32.dnnmark  bcmfc_alex_fc6_kf_64.dnnmark  bcmfc_alex_fc7_kf_16.dnnmark  bcmfc_alex_fc7_kf_32.dnnmark  bcmfc_alex_fc7_kf_64.dnnmark  bcmfc_alex_fc8_kf_16.dnnmark  bcmfc_alex_fc8_kf_32.dnnmark  bcmfc_alex_fc8_kf_64.dnnmark  fc_alex_conv1.dnnmark  fc_alex_conv2.dnnmark  fc_alex_conv3.dnnmark  fc_alex_conv4.dnnmark  fc_alex_conv5.dnnmark  fc_alex_fc6.dnnmark  fc_alex_fc7.dnnmark  fc_alex_fc8.dnnmark
bcm_experiments/config/synthetic/: bcmfc_16_1024.dnnmark  bcmfc_16_512.dnnmark  bcmfc_32_128.dnnmark  bcmfc_32_256.dnnmark  bcmfc_32_512.dnnmark  bcmfc_64_1024.dnnmark  bcmfc_64_512.dnnmark  bcmfc_64_64.dnnmark  fc_1024.dnnmark  fc_128.dnnmark  fc_256.dnnmark  fc_512.dnnmark  fc_64.dnnmark
bcm_experiments/config/timit/: bcmfc_fc1_1_16.dnnmark  bcmfc_fc1_1_32.dnnmark  bcmfc_fc1_1_64.dnnmark  bcmfc_fc1_2_16.dnnmark  bcmfc_fc1_2_32.dnnmark  bcmfc_fc1_2_64.dnnmark  bcmfc_fc1_3_16.dnnmark  bcmfc_fc1_3_32.dnnmark  bcmfc_fc1_3_64.dnnmark  bcmfc_fc2_1_16.dnnmark  bcmfc_fc2_1_32.dnnmark  bcmfc_fc2_1_64.dnnmark  bcmfc_fc2_2_16.dnnmark  bcmfc_fc2_2_32.dnnmark  bcmfc_fc2_2_64.dnnmark  bcmfc_fc2_3_16.dnnmark  bcmfc_fc2_3_32.dnnmark  bcmfc_fc2_3_64.dnnmark  bcmfc_fc3_1_16.dnnmark  bcmfc_fc3_1_32.dnnmark  bcmfc_fc3_1_64.dnnmark  bcmfc_fc3_2_16.dnnmark  bcmfc_fc3_2_32.dnnmark  bcmfc_fc3_2_64.dnnmark  bcmfc_fc3_3_16.dnnmark  bcmfc_fc3_3_32.dnnmark  bcmfc_fc3_3_64.dnnmark  bcmfc_fc4_1_16.dnnmark  bcmfc_fc4_1_32.dnnmark  bcmfc_fc4_1_64.dnnmark  bcmfc_fc4_2_16.dnnmark  bcmfc_fc4_2_32.dnnmark  bcmfc_fc4_2_64.dnnmark  bcmfc_fc4_3_16.dnnmark  bcmfc_fc4_3_32.dnnmark  bcmfc_fc4_3_64.dnnmark  fc1_1.dnnmark  fc1_2.dnnmark  fc1_3.dnnmark  fc2_1.dnnmark  (+8 more)
bcm_experiments/config/vggnet/: bcmfc_vgg_conv11_kf_16.dnnmark  (+35 more)
benchmarks/: CMakeLists.txt  usage.cc  usage.h
benchmarks/test_VGG/: test_VGG.cc
benchmarks/test_alexnet/: test_alexnet.cc
benchmarks/test_bcmfc/: test_bcmfc.cc
benchmarks/test_bwd_activation/: test_bwd_activation.cc
benchmarks/test_bwd_bcmfc/: test_bwd_bcmfc.cc
benchmarks/test_bwd_bn/: test_bwd_bn.cc
benchmarks/test_bwd_bypass/: CMakeLists.txt  test_bwd_bn.cc  test_bwd_bypass.cc
benchmarks/test_bwd_composed_model/: test_composed_model.cc
benchmarks/test_bwd_conv/: CMakeLists.txt  test_bwd_conv.cc
benchmarks/test_bwd_dropout/: test_bwd_dropout.cc
benchmarks/test_bwd_fc/: test_bwd_fc.cc
benchmarks/test_bwd_lrn/: test_bwd_lrn.cc
benchmarks/test_bwd_pool/: test_bwd_pool.cc
benchmarks/test_bwd_softmax/: test_bwd_softmax.cc
benchmarks/test_composed_model/: test_composed_model.cc
benchmarks/test_fc/: test_fc.cc
benchmarks/test_fw_conv/: CMakeLists.txt
benchmarks/test_fwd_activation/: test_fwd_activation.cc
benchmarks/test_fwd_bcmfc/: test_fwd_bcmfc.cc
benchmarks/test_fwd_bn/: test_fwd_bn.cc
benchmarks/test_fwd_bypass/: CMakeLists.txt  test_fwd_bn.cc  test_fwd_bypass.cc
benchmarks/test_fwd_composed_model/: test_fwd_composed_model.cc
benchmarks/test_fwd_conv/: CMakeLists.txt  test_fwd_conv.cc
benchmarks/test_fwd_dropout/: test_fwd_dropout.cc
benchmarks/test_fwd_fc/: test_fwd_fc.cc
benchmarks/test_fwd_lrn/: test_fwd_lrn.cc
benchmarks/test_fwd_pool/: test_fwd_pool.cc
benchmarks/test_fwd_softmax/: test_fwd_softmax.cc
config_example/: VGG16.dnnmark  alex_net_remove_relu.dnnmark  alexnet.dnnmark  alexnet_128.dnnmark  alexnet_no_relu_128.dnnmark  bcmfc_config.dnnmark  conv_config.dnnmark  fc_config.dnnmark  resnet.dnnmark
core/include/: bcm.h  common.h  cudnn_utility.h  data_manager.h  data_png.h  dnn_config_keywords.h  dnn_layer.h  dnn_param.h  dnn_png.h  dnn_primitive.h  dnn_utility.h  dnn_wrapper.h  dnnmark.h  fft_utility.h  fft_wrapper.h  gemm_wrapper.h  gpu_utility.h  io.h  kernels.h  memory_manager.h  timer.h  utility.h
core/src/: common.cc  dnn_config_keywords.cc  dnn_utility.cc  dnn_wrapper.cc  dnnmark.cc  fft_utility.cc  fft_wrapper.cc  gemm_wrapper.cc  gpu_utility.cc  utility.cc
data/: download.py
experiments/: alexnet_gputrace_profile.sh  alexnet_kernel.db  alexnet_metrics_profile.sh  compute_metric_plot.sh  conv_gputrace_profile.sh  createDB.py  dnn_kernel.db  exe_param_plot.sh  mem_plot.sh  nvprof_gpu_trace_plot_runtime.py  nvprof_gpu_trace_search_tool.py  nvprof_kernel_metric_trace_search_tool.py  primitive_profile.sh  profile.sh  queryKernelDB.py  scheduler.sh
experiments/comparison_tools/: combine_metrics.py  plot_with_normalization.py  plot_with_only_backward.py  runme.sh
experiments/config/: config_manager.sh
lib/: __init__.py  lib.py  plotter.py
tools/: has_cuda_gpu.c  parse_nvprof_csv_metrics_with_plot.py  run_kernel_fusion_and_non_kernel_fusion_alexnet.sh
(+85 files in other folders)
